// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button image 1`] = `
<button
  className="button-image button--primary"
  onClick={[Function]}
  type="button"
>
  <img
    alt="button logo"
    src="cancel.svg"
  />
</button>
`;

exports[`Storyshots Button image-circle 1`] = `
<button
  className="button-image button-image--circle button--primary"
  onClick={[Function]}
  type="button"
>
  <img
    alt="button logo"
    src="cancel.svg"
  />
</button>
`;

exports[`Storyshots Button text 1`] = `
<button
  className="button button--primary"
  onClick={[Function]}
  type="button"
>
  Manage Currencies
</button>
`;

exports[`Storyshots Card long 1`] = `
<li
  className="card"
>
  <div
    className="card__header"
  >
    <p
      className="medium"
    >
      KM
    </p>
    <p
      className="large"
    >
      BAM
    </p>
  </div>
  <p
    className="medium"
  >
    Bosnia-Herzegovina Convertible Mark
  </p>
  <p
    className="large"
  >
    1 NGN - 1587 BAM
  </p>
</li>
`;

exports[`Storyshots CurrencyChooser clear after button click 1`] = `
<form
  className="currency-chooser"
  onSubmit={[Function]}
>
  <div
    className="dropdown-input "
  >
    <input
      list="currencies"
      maxLength={35}
      name=""
      onChange={[Function]}
      placeholder="Add A Currency"
      type="text"
      value="United State Dollar"
    />
    <datalist
      id="currencies"
    >
      <option
        value="United States Dollar"
      >
        USD
      </option>
      <option
        value="Canadian Dollar"
      >
        CAD
      </option>
      <option
        value="Euro"
      >
        EUR
      </option>
      <option
        value="United Arab Emirates Dirham"
      >
        AED
      </option>
      <option
        value="Afghan Afghani"
      >
        AFN
      </option>
      <option
        value="Albanian Lek"
      >
        ALL
      </option>
      <option
        value="Armenian Dram"
      >
        AMD
      </option>
      <option
        value="Netherlands Antillean Guilder"
      >
        ANG
      </option>
      <option
        value="Angolan Kwanza"
      >
        AOA
      </option>
      <option
        value="Argentine Peso"
      >
        ARS
      </option>
      <option
        value="Australian Dollar"
      >
        AUD
      </option>
      <option
        value="Aruban Florin"
      >
        AWG
      </option>
      <option
        value="Azerbaijani Manat"
      >
        AZN
      </option>
      <option
        value="Bosnia-Herzegovina Convertible Mark"
      >
        BAM
      </option>
      <option
        value="Barbadian Dollar"
      >
        BBD
      </option>
      <option
        value="Bangladeshi Taka"
      >
        BDT
      </option>
      <option
        value="Bulgarian Lev"
      >
        BGN
      </option>
      <option
        value="Bahraini Dinar"
      >
        BHD
      </option>
      <option
        value="Burundian Franc"
      >
        BIF
      </option>
      <option
        value="Brunei Dollar"
      >
        BND
      </option>
      <option
        value="Bermudian Dollar"
      >
        BMD
      </option>
      <option
        value="Bolivian Boliviano"
      >
        BOB
      </option>
      <option
        value="Brazilian Real"
      >
        BRL
      </option>
      <option
        value="Bahamian Dollar"
      >
        BSD
      </option>
      <option
        value="Bhutanese Ngultrum"
      >
        BTN
      </option>
      <option
        value="Botswanan Pula"
      >
        BWP
      </option>
      <option
        value="New Belarusian Ruble"
      >
        BYN
      </option>
      <option
        value="Belarusian Ruble"
      >
        BYR
      </option>
      <option
        value="Belize Dollar"
      >
        BZD
      </option>
      <option
        value="Congolese Franc"
      >
        CDF
      </option>
      <option
        value="Swiss Franc"
      >
        CHF
      </option>
      <option
        value="Chilean Peso"
      >
        CLP
      </option>
      <option
        value="Chinese Yuan"
      >
        CNY
      </option>
      <option
        value="Colombian Peso"
      >
        COP
      </option>
      <option
        value="Costa Rican Colón"
      >
        CRC
      </option>
      <option
        value="Cuban Peso"
      >
        CUP
      </option>
      <option
        value="Cape Verdean Escudo"
      >
        CVE
      </option>
      <option
        value="Czech Republic Koruna"
      >
        CZK
      </option>
      <option
        value="Djiboutian Franc"
      >
        DJF
      </option>
      <option
        value="Danish Krone"
      >
        DKK
      </option>
      <option
        value="Dominican Peso"
      >
        DOP
      </option>
      <option
        value="Algerian Dinar"
      >
        DZD
      </option>
      <option
        value="Egyptian Pound"
      >
        EGP
      </option>
      <option
        value="Eritrean Nakfa"
      >
        ERN
      </option>
      <option
        value="Ethiopian Birr"
      >
        ETB
      </option>
      <option
        value="Fijian Dollar"
      >
        FJD
      </option>
      <option
        value="Falkland Island Pound"
      >
        FKP
      </option>
      <option
        value="British Pound Sterling"
      >
        GBP
      </option>
      <option
        value="Georgian Lari"
      >
        GEL
      </option>
      <option
        value="Guernsey Pound"
      >
        GGP
      </option>
      <option
        value="Ghanaian Cedi"
      >
        GHS
      </option>
      <option
        value="Gibraltar Pound"
      >
        GIP
      </option>
      <option
        value="Gambian Dalasi"
      >
        GMD
      </option>
      <option
        value="Guinean Franc"
      >
        GNF
      </option>
      <option
        value="Guatemalan Quetzal"
      >
        GTQ
      </option>
      <option
        value="Guyanaese Dollar"
      >
        GYD
      </option>
      <option
        value="Hong Kong Dollar"
      >
        HKD
      </option>
      <option
        value="Honduran Lempira"
      >
        HNL
      </option>
      <option
        value="Croatian Kuna"
      >
        HRK
      </option>
      <option
        value="Haitian Gourde"
      >
        HTG
      </option>
      <option
        value="Hungarian Forint"
      >
        HUF
      </option>
      <option
        value="Indonesian Rupiah"
      >
        IDR
      </option>
      <option
        value="Israeli New Sheqel"
      >
        ILS
      </option>
      <option
        value="Manx pound"
      >
        IMP
      </option>
      <option
        value="Indian Rupee"
      >
        INR
      </option>
      <option
        value="Iraqi Dinar"
      >
        IQD
      </option>
      <option
        value="Iranian Rial"
      >
        IRR
      </option>
      <option
        value="Icelandic Króna"
      >
        ISK
      </option>
      <option
        value="Jersey Pound"
      >
        JEP
      </option>
      <option
        value="Jamaican Dollar"
      >
        JMD
      </option>
      <option
        value="Jordanian Dinar"
      >
        JOD
      </option>
      <option
        value="Japanese Yen"
      >
        JPY
      </option>
      <option
        value="Kyrgyzstani som"
      >
        KES
      </option>
      <option
        value="Kyrgyzstani Som"
      >
        KGS
      </option>
      <option
        value="Cambodian Riel"
      >
        KHR
      </option>
      <option
        value="Comorian Franc"
      >
        KMF
      </option>
      <option
        value="North Korean Won"
      >
        KPW
      </option>
      <option
        value="South Korean Won"
      >
        KRW
      </option>
      <option
        value="Kuwaiti Dinar"
      >
        KWD
      </option>
      <option
        value="Cayman Islands dollar"
      >
        KYD
      </option>
      <option
        value="Kazakhstani Tenge"
      >
        KZT
      </option>
      <option
        value="Lao kip"
      >
        LAK
      </option>
      <option
        value="Lebanese Pound"
      >
        LBP
      </option>
      <option
        value="Sri Lankan Rupee"
      >
        LKR
      </option>
      <option
        value="Liberian Dollar"
      >
        LRD
      </option>
      <option
        value="Lesotho Loti"
      >
        LSL
      </option>
      <option
        value="Lithuanian Litas"
      >
        LTL
      </option>
      <option
        value="Latvian Lats"
      >
        LVL
      </option>
      <option
        value="Libyan Dinar"
      >
        LYD
      </option>
      <option
        value="Moroccan Dirham"
      >
        MAD
      </option>
      <option
        value="Moldovan Leu"
      >
        MDL
      </option>
      <option
        value="Malagasy Ariary"
      >
        MGA
      </option>
      <option
        value="Macedonian Denar"
      >
        MKD
      </option>
      <option
        value="Myanma Kyat"
      >
        MMK
      </option>
      <option
        value="Mongolian Tugrik"
      >
        MNT
      </option>
      <option
        value="Macanese Pataca"
      >
        MOP
      </option>
      <option
        value="Mauritanian Ouguiya"
      >
        MRO
      </option>
      <option
        value="Mauritian Rupee"
      >
        MUR
      </option>
      <option
        value="Maldivian Rufiyaa"
      >
        MVR
      </option>
      <option
        value="Malawian Kwacha"
      >
        MWK
      </option>
      <option
        value="Mexican Peso"
      >
        MXN
      </option>
      <option
        value="Malaysian Ringgit"
      >
        MYR
      </option>
      <option
        value="Mozambican Metical"
      >
        MZN
      </option>
      <option
        value="Namibian Dollar"
      >
        NAD
      </option>
      <option
        value="Nigerian Naira"
      >
        NGN
      </option>
      <option
        value="Nicaraguan Córdoba"
      >
        NIO
      </option>
      <option
        value="Norwegian Krone"
      >
        NOK
      </option>
      <option
        value="Nepalese Rupee"
      >
        NPR
      </option>
      <option
        value="New Zealand Dollar"
      >
        NZD
      </option>
      <option
        value="Omani Rial"
      >
        OMR
      </option>
      <option
        value="Panamanian Balboa"
      >
        PAB
      </option>
      <option
        value="Peruvian Nuevo Sol"
      >
        PEN
      </option>
      <option
        value="Papua New Guinean Kina"
      >
        PGK
      </option>
      <option
        value="Philippine Peso"
      >
        PHP
      </option>
      <option
        value="Pakistani Rupee"
      >
        PKR
      </option>
      <option
        value="Polish Zloty"
      >
        PLN
      </option>
      <option
        value="Paraguayan Guarani"
      >
        PYG
      </option>
      <option
        value="Qatari Rial"
      >
        QAR
      </option>
      <option
        value="Romanian Leu"
      >
        RON
      </option>
      <option
        value="Serbian Dinar"
      >
        RSD
      </option>
      <option
        value="Russian Ruble"
      >
        RUB
      </option>
      <option
        value="Rwandan Franc"
      >
        RWF
      </option>
      <option
        value="Saudi Riyal"
      >
        SAR
      </option>
      <option
        value="Solomon Islander Dollar"
      >
        SBD
      </option>
      <option
        value="Seychellois Rupee"
      >
        SCR
      </option>
      <option
        value="Sudanese Pound"
      >
        SDG
      </option>
      <option
        value="Swedish Krona"
      >
        SEK
      </option>
      <option
        value="Singapore Dollar"
      >
        SGD
      </option>
      <option
        value="Saint Helena Pound"
      >
        SHP
      </option>
      <option
        value="Sierra Leonean Leone"
      >
        SLL
      </option>
      <option
        value="Somali Shilling"
      >
        SOS
      </option>
      <option
        value="Surinamese Dollar"
      >
        SRD
      </option>
      <option
        value="Sao Tomé and Príncipe Dobra"
      >
        STD
      </option>
      <option
        value="Salvadoran Colón"
      >
        SVC
      </option>
      <option
        value="Syrian Pound"
      >
        SYP
      </option>
      <option
        value="Swazi Lilangeni"
      >
        SZL
      </option>
      <option
        value="Thai Baht"
      >
        THB
      </option>
      <option
        value="Tajikistani Somoni"
      >
        TJS
      </option>
      <option
        value="Turkmenistani Manat"
      >
        TMT
      </option>
      <option
        value="Tunisian Dinar"
      >
        TND
      </option>
      <option
        value="Tongan Paʻanga"
      >
        TOP
      </option>
      <option
        value="Turkish Lira"
      >
        TRY
      </option>
      <option
        value="Trinidad and Tobago Dollar"
      >
        TTD
      </option>
      <option
        value="New Taiwan Dollar"
      >
        TWD
      </option>
      <option
        value="Tanzanian Shilling"
      >
        TZS
      </option>
      <option
        value="Ukrainian Hryvnia"
      >
        UAH
      </option>
      <option
        value="Ugandan Shilling"
      >
        UGX
      </option>
      <option
        value="Uruguayan Peso"
      >
        UYU
      </option>
      <option
        value="Uzbekistan Som"
      >
        UZS
      </option>
      <option
        value="Venezuelan Bolívar Fuerte"
      >
        VEF
      </option>
      <option
        value="Vietnamese Dong"
      >
        VND
      </option>
      <option
        value="Ni-Vanuatu Vatu"
      >
        VUV
      </option>
      <option
        value="Samoan Tala"
      >
        WST
      </option>
      <option
        value="CFA Franc BEAC"
      >
        XAF
      </option>
      <option
        value="East Caribbean Dollar"
      >
        XCD
      </option>
      <option
        value="CFA Franc BCEAO"
      >
        XOF
      </option>
      <option
        value="CFP franc"
      >
        XPF
      </option>
      <option
        value="Yemeni Rial"
      >
        YER
      </option>
      <option
        value="South African Rand"
      >
        ZAR
      </option>
      <option
        value="Zambian Kwacha (pre-2013)"
      >
        ZMK
      </option>
      <option
        value="Zambian Kwacha"
      >
        ZMW
      </option>
      <option
        value="Zimbabwean Dollar"
      >
        ZML
      </option>
    </datalist>
    <img
      alt="dropdown logo"
      src="dropdown.svg"
    />
  </div>
  <button
    className="button-image button--secondary"
    type="submit"
  >
    <img
      alt="button logo"
      src="plus.svg"
    />
  </button>
</form>
`;

exports[`Storyshots CurrencyChooser default 1`] = `
<form
  className="currency-chooser"
  onSubmit={[Function]}
>
  <div
    className="dropdown-input "
  >
    <input
      list="currencies"
      maxLength={35}
      name=""
      onChange={[Function]}
      placeholder="Add A Currency"
      type="text"
      value="United State Dollar"
    />
    <datalist
      id="currencies"
    >
      <option
        value="United States Dollar"
      >
        USD
      </option>
      <option
        value="Canadian Dollar"
      >
        CAD
      </option>
      <option
        value="Euro"
      >
        EUR
      </option>
      <option
        value="United Arab Emirates Dirham"
      >
        AED
      </option>
      <option
        value="Afghan Afghani"
      >
        AFN
      </option>
      <option
        value="Albanian Lek"
      >
        ALL
      </option>
      <option
        value="Armenian Dram"
      >
        AMD
      </option>
      <option
        value="Netherlands Antillean Guilder"
      >
        ANG
      </option>
      <option
        value="Angolan Kwanza"
      >
        AOA
      </option>
      <option
        value="Argentine Peso"
      >
        ARS
      </option>
      <option
        value="Australian Dollar"
      >
        AUD
      </option>
      <option
        value="Aruban Florin"
      >
        AWG
      </option>
      <option
        value="Azerbaijani Manat"
      >
        AZN
      </option>
      <option
        value="Bosnia-Herzegovina Convertible Mark"
      >
        BAM
      </option>
      <option
        value="Barbadian Dollar"
      >
        BBD
      </option>
      <option
        value="Bangladeshi Taka"
      >
        BDT
      </option>
      <option
        value="Bulgarian Lev"
      >
        BGN
      </option>
      <option
        value="Bahraini Dinar"
      >
        BHD
      </option>
      <option
        value="Burundian Franc"
      >
        BIF
      </option>
      <option
        value="Brunei Dollar"
      >
        BND
      </option>
      <option
        value="Bermudian Dollar"
      >
        BMD
      </option>
      <option
        value="Bolivian Boliviano"
      >
        BOB
      </option>
      <option
        value="Brazilian Real"
      >
        BRL
      </option>
      <option
        value="Bahamian Dollar"
      >
        BSD
      </option>
      <option
        value="Bhutanese Ngultrum"
      >
        BTN
      </option>
      <option
        value="Botswanan Pula"
      >
        BWP
      </option>
      <option
        value="New Belarusian Ruble"
      >
        BYN
      </option>
      <option
        value="Belarusian Ruble"
      >
        BYR
      </option>
      <option
        value="Belize Dollar"
      >
        BZD
      </option>
      <option
        value="Congolese Franc"
      >
        CDF
      </option>
      <option
        value="Swiss Franc"
      >
        CHF
      </option>
      <option
        value="Chilean Peso"
      >
        CLP
      </option>
      <option
        value="Chinese Yuan"
      >
        CNY
      </option>
      <option
        value="Colombian Peso"
      >
        COP
      </option>
      <option
        value="Costa Rican Colón"
      >
        CRC
      </option>
      <option
        value="Cuban Peso"
      >
        CUP
      </option>
      <option
        value="Cape Verdean Escudo"
      >
        CVE
      </option>
      <option
        value="Czech Republic Koruna"
      >
        CZK
      </option>
      <option
        value="Djiboutian Franc"
      >
        DJF
      </option>
      <option
        value="Danish Krone"
      >
        DKK
      </option>
      <option
        value="Dominican Peso"
      >
        DOP
      </option>
      <option
        value="Algerian Dinar"
      >
        DZD
      </option>
      <option
        value="Egyptian Pound"
      >
        EGP
      </option>
      <option
        value="Eritrean Nakfa"
      >
        ERN
      </option>
      <option
        value="Ethiopian Birr"
      >
        ETB
      </option>
      <option
        value="Fijian Dollar"
      >
        FJD
      </option>
      <option
        value="Falkland Island Pound"
      >
        FKP
      </option>
      <option
        value="British Pound Sterling"
      >
        GBP
      </option>
      <option
        value="Georgian Lari"
      >
        GEL
      </option>
      <option
        value="Guernsey Pound"
      >
        GGP
      </option>
      <option
        value="Ghanaian Cedi"
      >
        GHS
      </option>
      <option
        value="Gibraltar Pound"
      >
        GIP
      </option>
      <option
        value="Gambian Dalasi"
      >
        GMD
      </option>
      <option
        value="Guinean Franc"
      >
        GNF
      </option>
      <option
        value="Guatemalan Quetzal"
      >
        GTQ
      </option>
      <option
        value="Guyanaese Dollar"
      >
        GYD
      </option>
      <option
        value="Hong Kong Dollar"
      >
        HKD
      </option>
      <option
        value="Honduran Lempira"
      >
        HNL
      </option>
      <option
        value="Croatian Kuna"
      >
        HRK
      </option>
      <option
        value="Haitian Gourde"
      >
        HTG
      </option>
      <option
        value="Hungarian Forint"
      >
        HUF
      </option>
      <option
        value="Indonesian Rupiah"
      >
        IDR
      </option>
      <option
        value="Israeli New Sheqel"
      >
        ILS
      </option>
      <option
        value="Manx pound"
      >
        IMP
      </option>
      <option
        value="Indian Rupee"
      >
        INR
      </option>
      <option
        value="Iraqi Dinar"
      >
        IQD
      </option>
      <option
        value="Iranian Rial"
      >
        IRR
      </option>
      <option
        value="Icelandic Króna"
      >
        ISK
      </option>
      <option
        value="Jersey Pound"
      >
        JEP
      </option>
      <option
        value="Jamaican Dollar"
      >
        JMD
      </option>
      <option
        value="Jordanian Dinar"
      >
        JOD
      </option>
      <option
        value="Japanese Yen"
      >
        JPY
      </option>
      <option
        value="Kyrgyzstani som"
      >
        KES
      </option>
      <option
        value="Kyrgyzstani Som"
      >
        KGS
      </option>
      <option
        value="Cambodian Riel"
      >
        KHR
      </option>
      <option
        value="Comorian Franc"
      >
        KMF
      </option>
      <option
        value="North Korean Won"
      >
        KPW
      </option>
      <option
        value="South Korean Won"
      >
        KRW
      </option>
      <option
        value="Kuwaiti Dinar"
      >
        KWD
      </option>
      <option
        value="Cayman Islands dollar"
      >
        KYD
      </option>
      <option
        value="Kazakhstani Tenge"
      >
        KZT
      </option>
      <option
        value="Lao kip"
      >
        LAK
      </option>
      <option
        value="Lebanese Pound"
      >
        LBP
      </option>
      <option
        value="Sri Lankan Rupee"
      >
        LKR
      </option>
      <option
        value="Liberian Dollar"
      >
        LRD
      </option>
      <option
        value="Lesotho Loti"
      >
        LSL
      </option>
      <option
        value="Lithuanian Litas"
      >
        LTL
      </option>
      <option
        value="Latvian Lats"
      >
        LVL
      </option>
      <option
        value="Libyan Dinar"
      >
        LYD
      </option>
      <option
        value="Moroccan Dirham"
      >
        MAD
      </option>
      <option
        value="Moldovan Leu"
      >
        MDL
      </option>
      <option
        value="Malagasy Ariary"
      >
        MGA
      </option>
      <option
        value="Macedonian Denar"
      >
        MKD
      </option>
      <option
        value="Myanma Kyat"
      >
        MMK
      </option>
      <option
        value="Mongolian Tugrik"
      >
        MNT
      </option>
      <option
        value="Macanese Pataca"
      >
        MOP
      </option>
      <option
        value="Mauritanian Ouguiya"
      >
        MRO
      </option>
      <option
        value="Mauritian Rupee"
      >
        MUR
      </option>
      <option
        value="Maldivian Rufiyaa"
      >
        MVR
      </option>
      <option
        value="Malawian Kwacha"
      >
        MWK
      </option>
      <option
        value="Mexican Peso"
      >
        MXN
      </option>
      <option
        value="Malaysian Ringgit"
      >
        MYR
      </option>
      <option
        value="Mozambican Metical"
      >
        MZN
      </option>
      <option
        value="Namibian Dollar"
      >
        NAD
      </option>
      <option
        value="Nigerian Naira"
      >
        NGN
      </option>
      <option
        value="Nicaraguan Córdoba"
      >
        NIO
      </option>
      <option
        value="Norwegian Krone"
      >
        NOK
      </option>
      <option
        value="Nepalese Rupee"
      >
        NPR
      </option>
      <option
        value="New Zealand Dollar"
      >
        NZD
      </option>
      <option
        value="Omani Rial"
      >
        OMR
      </option>
      <option
        value="Panamanian Balboa"
      >
        PAB
      </option>
      <option
        value="Peruvian Nuevo Sol"
      >
        PEN
      </option>
      <option
        value="Papua New Guinean Kina"
      >
        PGK
      </option>
      <option
        value="Philippine Peso"
      >
        PHP
      </option>
      <option
        value="Pakistani Rupee"
      >
        PKR
      </option>
      <option
        value="Polish Zloty"
      >
        PLN
      </option>
      <option
        value="Paraguayan Guarani"
      >
        PYG
      </option>
      <option
        value="Qatari Rial"
      >
        QAR
      </option>
      <option
        value="Romanian Leu"
      >
        RON
      </option>
      <option
        value="Serbian Dinar"
      >
        RSD
      </option>
      <option
        value="Russian Ruble"
      >
        RUB
      </option>
      <option
        value="Rwandan Franc"
      >
        RWF
      </option>
      <option
        value="Saudi Riyal"
      >
        SAR
      </option>
      <option
        value="Solomon Islander Dollar"
      >
        SBD
      </option>
      <option
        value="Seychellois Rupee"
      >
        SCR
      </option>
      <option
        value="Sudanese Pound"
      >
        SDG
      </option>
      <option
        value="Swedish Krona"
      >
        SEK
      </option>
      <option
        value="Singapore Dollar"
      >
        SGD
      </option>
      <option
        value="Saint Helena Pound"
      >
        SHP
      </option>
      <option
        value="Sierra Leonean Leone"
      >
        SLL
      </option>
      <option
        value="Somali Shilling"
      >
        SOS
      </option>
      <option
        value="Surinamese Dollar"
      >
        SRD
      </option>
      <option
        value="Sao Tomé and Príncipe Dobra"
      >
        STD
      </option>
      <option
        value="Salvadoran Colón"
      >
        SVC
      </option>
      <option
        value="Syrian Pound"
      >
        SYP
      </option>
      <option
        value="Swazi Lilangeni"
      >
        SZL
      </option>
      <option
        value="Thai Baht"
      >
        THB
      </option>
      <option
        value="Tajikistani Somoni"
      >
        TJS
      </option>
      <option
        value="Turkmenistani Manat"
      >
        TMT
      </option>
      <option
        value="Tunisian Dinar"
      >
        TND
      </option>
      <option
        value="Tongan Paʻanga"
      >
        TOP
      </option>
      <option
        value="Turkish Lira"
      >
        TRY
      </option>
      <option
        value="Trinidad and Tobago Dollar"
      >
        TTD
      </option>
      <option
        value="New Taiwan Dollar"
      >
        TWD
      </option>
      <option
        value="Tanzanian Shilling"
      >
        TZS
      </option>
      <option
        value="Ukrainian Hryvnia"
      >
        UAH
      </option>
      <option
        value="Ugandan Shilling"
      >
        UGX
      </option>
      <option
        value="Uruguayan Peso"
      >
        UYU
      </option>
      <option
        value="Uzbekistan Som"
      >
        UZS
      </option>
      <option
        value="Venezuelan Bolívar Fuerte"
      >
        VEF
      </option>
      <option
        value="Vietnamese Dong"
      >
        VND
      </option>
      <option
        value="Ni-Vanuatu Vatu"
      >
        VUV
      </option>
      <option
        value="Samoan Tala"
      >
        WST
      </option>
      <option
        value="CFA Franc BEAC"
      >
        XAF
      </option>
      <option
        value="East Caribbean Dollar"
      >
        XCD
      </option>
      <option
        value="CFA Franc BCEAO"
      >
        XOF
      </option>
      <option
        value="CFP franc"
      >
        XPF
      </option>
      <option
        value="Yemeni Rial"
      >
        YER
      </option>
      <option
        value="South African Rand"
      >
        ZAR
      </option>
      <option
        value="Zambian Kwacha (pre-2013)"
      >
        ZMK
      </option>
      <option
        value="Zambian Kwacha"
      >
        ZMW
      </option>
      <option
        value="Zimbabwean Dollar"
      >
        ZML
      </option>
    </datalist>
    <img
      alt="dropdown logo"
      src="dropdown.svg"
    />
  </div>
  <button
    className="button-image button--secondary"
    type="submit"
  >
    <img
      alt="button logo"
      src="plus.svg"
    />
  </button>
</form>
`;

exports[`Storyshots CurrencyLabel default 1`] = `
<li
  className="currency-label"
>
  <p>
    (NGN) Nigerian Naira
  </p>
  <button
    className="button-image button--danger"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="cancel logo"
      src="cancel.svg"
    />
  </button>
</li>
`;

exports[`Storyshots DropdownInput another flavour 1`] = `
<div
  className="dropdown-input dropdown-input--r"
>
  <input
    list="currecency"
    maxLength={35}
    name="random"
    onChange={[Function]}
    placeholder="NGN"
    type="text"
    value=""
  />
  <datalist
    id="currecency"
  >
    <option
      value="NGN"
    >
      NGN
    </option>
    <option
      value="USD"
    >
      USD
    </option>
    <option
      value="EUR"
    >
      EUR
    </option>
    <option
      value="BAM"
    >
      BAM
    </option>
  </datalist>
  <img
    alt="dropdown logo"
    src="dropdown.svg"
  />
</div>
`;

exports[`Storyshots DropdownInput plain 1`] = `
<div
  className="dropdown-input "
>
  <input
    list="currecency"
    maxLength={35}
    name="random"
    onChange={[Function]}
    placeholder="NGN"
    type="text"
    value=""
  />
  <datalist
    id="currecency"
  >
    <option
      value="NGN"
    >
      NGN
    </option>
    <option
      value="USD"
    >
      USD
    </option>
    <option
      value="EUR"
    >
      EUR
    </option>
    <option
      value="BAM"
    >
      BAM
    </option>
  </datalist>
  <img
    alt="dropdown logo"
    src="dropdown.svg"
  />
</div>
`;
